<resources>
    <!--test_strings-->
    <string name="dummy_text">Dummy</string>
    <string name="dummy_number">40,4</string>

    <!---->
    <string name="app_name">Ea$yPay</string>
    <string name="service_name">Ea$yPay Payment</string>
    <string name="card_title">Card Title</string>
    <string name="order">Bestel</string>
    <string name="balance">Saldo</string>
    <string name="overview">Overzicht</string>
    <string name="account">Account</string>

    <string name="balance_wallet">Saldo: </string>
    <string name="balance_increase">Saldo opwaarderen</string>
    <string name="balance_refund">Saldo terugvragen</string>

    <string name="balance_wallet_increase">Huidig saldo: </string>
    <string name="balance_wallet_aincrease">Saldo na opwaardering: </string>
    <string name="balance_increase_confirm">Bevestigen</string>

    <string name="balance_refund_question">Weet u zeker dat u uw saldo wil terugboeken?</string>
    <string name="balance_refund_confirm">Bevestigen</string>
    <string name="balance_refund_cancel">Annuleren</string>

    <string name="over150">Saldo kan niet hoger zijn dan €150,-</string>
    <string name="isnull">Voer alstublieft een bedrag in.</string>
    <string name="nomoney">Geen saldo om terug te vragen.</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!--general-->
    <string name="cancel">Annuleren</string>

    <!--login-->
    <string name="username_login">Gebruikersnaam</string>
    <string name="password_login">Wachtwoord</string>
    <string name="login_login">Inloggen</string>
    <string name="signup_login">Aanmelden</string>

    <!--signup-->
    <string name="register_signup">Registreren</string>
    <string name="firstname_required_signup">* Voornaam</string>
    <string name="lastname_required_signup">* Achternaam</string>
    <string name="username_required_signup">* Gebruikersnaam (6-16)</string>
    <string name="password_required_signup">* Wachtwoord (8-32)</string>
    <string name="email_signup">Email</string>
    <string name="banknumber_signup">Bankrekeningnummer</string>

    <string name="empty_fields">Een of meer velden zijn niet ingevuld</string>
    <string name="account_being_created_progressdialog">Account wordt aangemaakt...</string>
    <string name="username_already_exists">Gebruikersnaam bestaat al.</string>
    <string name="username_too_short">Gebruikersnaam is te kort.</string>
    <string name="username_too_long">Gebruikersnaam is te lang.</string>
    <string name="password_too_short">Wachtwoord is te kort.</string>
    <string name="password_too_long">Wachtwoord is te lang.</string>

    <string name="account_created1of2">Account met gebruikersnaam \'</string>
    <string name="account_created2of2">\' aangemaakt.</string>

    <!--userdata-->
    <string name="userdata_userdata">Accountgegevens</string>
    <string name="firstname_userdata">Voornaam:</string>
    <string name="lastname_userdata">Achternaam:</string>
    <string name="username_userdata">Gebruikersnaam:</string>
    <string name="password_userdata">Wachtwoord:</string>
    <string name="email_userdata">Email:</string>
    <string name="banknumber_userdata">Bankrekeningnr:</string>
    <string name="wachtwoord_herh_userdata">Wachtwoord herh:</string>
    <string name="new_password_userdata">Nieuw wachtwoord:</string>
    <string name="confirm_password_userdata">Wachtwoord bevestigen</string>


    <string-array name="spinner_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <!--Activity overview current orders-->
    <string name="title_activity_oco">OHB</string>
    <string name="title_oco">Bestelling</string>
    <string name="subtotal_oco">Subtotaal: €</string>
    <string name="button_text_oco">Bestellen</string>

    <!--listview product row-->
    <string name="lpr_1">Product Name</string>
    <string name="lpr_2">Product Price</string>

    <!--activity_scan-->
    <string name="button_scan">Cancel</string>
    <string name="instructions_scan1">Houd uw telefoon tegen de kassa (stap 1/2)</string>
    <string name="instructions_scan2">Bestelling ontvangen. Scan nogmaals (stap 2/2)</string>
    
    <!--activity_customer_data-->
    <string name="customer_data_achternaam">Achternaam:</string>
    <string name="customer_data_saldo">Saldo:</string>
    <string name="customer_data_klantID">KlantID:</string>
</resources>
