<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/purchased_product_image"
        android:contentDescription="@string/dummy_text"
        />

    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:id="@+id/purchased_product_name"
        android:layout_marginEnd="30dp"
        android:text="@string/lpr_1" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:id="@+id/purchased_product_amount"
        android:layout_marginEnd="30dp"
        android:gravity="end"
        android:text="1x"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginEnd="50dp"
        android:id="@+id/purchased_product_price"
        android:text="@string/lpr_2" />
</LinearLayout>
