<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <include layout="@layout/header" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:layout_weight="2">
        <TextView
            android:id="@+id/balanceRefund"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/balance_wallet"/>
    </LinearLayout>
    <TextView
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:textSize="20dp"
        android:gravity="center"
        android:text="@string/balance_refund_question"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="100dp"
        android:layout_weight="1"
        android:layout_gravity="center|bottom">
        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:textSize="17dp"
            android:id="@+id/balance_refund_cancel"
            android:text="@string/balance_refund_cancel"
            android:background="@drawable/button" />
        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:textSize="17dp"
            android:id="@+id/balance_refund_confirm"
            android:text="@string/balance_refund_confirm"
            android:background="@drawable/button" />
    </LinearLayout>
</LinearLayout>