<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="100dp"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40dp"
            android:textStyle="bold"
            android:text="@string/balance_wallet"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40dp"
            android:textStyle="bold"
            android:id="@+id/balance_wallet_amount"/>
    </LinearLayout>
    <Button
        android:layout_marginTop="30dp"
        android:layout_width="270dp"
        android:layout_height="90dp"
        android:id="@+id/balance_wallet_toincrease"
        android:textSize="17dp"
        android:text="@string/balance_increase"
        android:background="@drawable/button" />
    <Button
        android:layout_marginTop="5dp"
        android:layout_width="270dp"
        android:layout_height="90dp"
        android:id="@+id/balance_wallet_torefund"
        android:textSize="17dp"
        android:text="@string/balance_refund"
        android:background="@drawable/button" />
</LinearLayout>